# sds-access-lib

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  sds_api.py
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: test.yml
tests/: test_api.py
